hedgedoc/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc-database
  namespace: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      name: hedgedoc-database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: hedgedoc-database
        ingress: lan
        egress: lan
    spec:
      containers:
        - name: hedgedoc-database
          image: postgres:17.4-alpine3.21
          resources:
            limits:
              memory: "256Mi"
              cpu: "100m"
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database
              subPath: postgres
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: hedgedoc-local-data-pvc
