hedgedoc/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc-database-svc
  namespace: homelab
spec:
  selector:
    name: hedgedoc-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
