hedgedoc/hedgedoc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hedgedoc-ing
  namespace: homelab
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /hedgedoc
        pathType: Prefix
        backend:
          service:
            name: hedgedoc-svc
            port:
              number: 30200
